align for the text is fixed

--- a/conFusion/src/styles.scss
+++ b/conFusion/src/styles.scss
@@ -13,3 +13,8 @@ body
   display: flex;
 }
 
+h1,p
+{
+  text-align : left;
+}
+
